chore: Update environment variable configuration in docker-compose.yml and Dockerfile to use dynamic values for API URLs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://strapi:1337/graphql
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+      - NEXT_PUBLIC_SERVER_API_URL=${NEXT_PUBLIC_SERVER_API_URL}
       - NEXT_PUBLIC_S3_CLOUDFRONT_URL=${NEXT_PUBLIC_S3_CLOUDFRONT_URL}
       - NEXT_PUBLIC_S3_BUCKET_URL=${NEXT_PUBLIC_S3_BUCKET_URL}
     networks:
