--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@apollo/client": "^3.12.2",
     "graphql": "^16.9.0",
-    "next": "15.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "^15.0.3",
+    "react": "^19.0.0-rc-66855b96-20241106",
+    "react-dom": "^19.0.0-rc-66855b96-20241106",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
