--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.2",
+    "@tanstack/react-query": "^5.68.0",
     "clsx": "^2.1.1",
     "graphql": "^16.9.0",
     "next": "^15.0.3",
