--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.2",
+    "@hookform/resolvers": "^4.1.3",
     "@tanstack/react-query": "^5.68.0",
     "clsx": "^2.1.1",
     "graphql": "^16.9.0",
     "next": "^15.0.3",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.54.2",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
