--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@hookform/resolvers": "^4.1.3",
     "@tanstack/react-query": "^5.68.0",
     "clsx": "^2.1.1",
-    "graphql": "^16.9.0",
+    "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
+    "lucide-react": "^0.484.0",
     "next": "^15.0.3",
     "react": "^19.0.0-rc-66855b96-20241106",
     "react-dom": "^19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
+    "rehype-raw": "^7.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
