--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^10.1.0",
     "react-slick": "^0.30.3",
     "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
